--- a/redux-paint/package.json
+++ b/redux-paint/package.json
@@ -10,12 +10,14 @@
     "preview": "vite preview --host"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.5.0",
+    "@types/file-saver": "^2.0.7",
     "@types/react-redux": "^7.1.34",
     "@types/redux-logger": "^3.0.13",
+    "file-saver": "^2.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^9.2.0",
-    "redux": "^5.0.1",
     "redux-devtools-extension": "^2.13.9",
     "redux-logger": "^3.0.6",
     "xp.css": "^0.2.6"
