--- a/redux-paint/package.json
+++ b/redux-paint/package.json
@@ -2,12 +2,14 @@
   "name": "redux-paint",
   "private": true,
   "version": "0.0.0",
-  "type": "module",
+  "type": "commonjs",
   "scripts": {
-    "dev": "vite --host",
+    "dev": "concurrently --kill-others \"npm run start:server\" \"vite --host\"",
+    "dev-front": "vite --host",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview --host"
+    "preview": "vite preview --host",
+    "start:server": "node server/index.js"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.5.0",
@@ -18,19 +20,29 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^9.2.0",
+    "redux": "^5.0.1",
     "redux-devtools-extension": "^2.13.9",
     "redux-logger": "^3.0.6",
     "xp.css": "^0.2.6"
   },
   "devDependencies": {
+    "@types/cors": "2.8.6",
+    "@types/express": "4.17.6",
+    "@types/lowdb": "1.0.9",
     "@types/react": "^18.2.56",
     "@types/react-dom": "^18.2.19",
     "@typescript-eslint/eslint-plugin": "^7.0.2",
     "@typescript-eslint/parser": "^7.0.2",
     "@vitejs/plugin-react-swc": "^3.5.0",
+    "concurrently": "5.1.0",
+    "cors": "2.8.5",
     "eslint": "^8.56.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
+    "express": "4.17.1",
+    "lowdb": "1.0.0",
+    "nanoid": "3.1.9",
+    "ts-node": "^8.9.0",
     "typescript": "^5.2.2",
     "vite": "^5.1.4"
   }
