--- a/redux-paint/tsconfig.node.json
+++ b/redux-paint/tsconfig.node.json
@@ -3,9 +3,14 @@
     "composite": true,
     "skipLibCheck": true,
     "module": "ESNext",
-    "moduleResolution": "bundler",
+    "moduleResolution": "node",
+    "target": "ES2020",
     "allowSyntheticDefaultImports": true,
-    "strict": true
+    "strict": false,
+    "esModuleInterop": true
   },
-  "include": ["vite.config.ts"]
+  "include": [
+    "vite.config.ts",
+    "server/**/*.ts"
+  ]
 }
